--- a/modules/ROOT/pages/tools/vale.adoc
+++ b/modules/ROOT/pages/tools/vale.adoc
@@ -1,6 +1,6 @@
 = Vale
 
-Lint your docs, stay up to date with upstream style guide changes, and customize your own rules and vocabulary to reflect your style preferences with Vale.
+Lint your docs, stay up to date with upstream style guide changes, and customize your own rules and vocabulary to reflect your style preferences with link:https://vale.sh[Vale^].
 
 image:icons/vale.png[Vale in terminal,500,auto]
 
