--- a/modules/ROOT/pages/tools/antora.adoc
+++ b/modules/ROOT/pages/tools/antora.adoc
@@ -1,5 +1,7 @@
 = Antora
 
+With a tagline that claims it's a "site generator for tech writers who love writing AsciiDocs" I had to give Antora a try. In fact, it's what I wrote this portfolio with.
+
 image:icons/antora.png[Antora logo,50,50] 
 
 == Separation of concerns
@@ -17,6 +19,51 @@ Key factors in AsciiDoc syntax (turn this list into a short paragraph and add to
 * as readable as Markdown
 * *link:https://docs.asciidoctor.org/asciidoc/latest/directives/conditionals/[conditionals,window=_blank]:* route content depending on output (for example, HTML or PDF)
 * *link:https://docs.asciidoctor.org/asciidoc/latest/directives/ifdef-ifndef/[directives,window=_blank]:* reuse content with the `::includes` directive and display specific content using logic with the `::ifdef`, `::ifndef`, and `::ifeval` directives
+
+== Attributes
+
+Works similar to how Hugo uses front matter (creates metadata).
+
+Approach: either define at the top of the page or (if you have a lot of attributes you'd like to curate) store in an attributes folder and include for different "recipes" of audiences (admin, internal).
+
+example attributes file: `general-attribues.adoc`, `administrator-attributes.adoc`, `internal-attributes.adoc`
+
+Single source content (and output depending on audience). This means you don't have to have two versions of the same doc--it all lives on the same page.
+
+== Includes
+
+great tool. includes the whole file by default. 
+
+including a section of the file. always scared of doing it by line, so do it by "tag" if you're trying to grab a section of the page. if using tags, you'll need to filter them out, though! `\include::file-with-snippets.adoc[tag=!*]`
+
+== Conditional directives
+
+include or exclude based on these attributes. use for administrator and internal notes.
+
+balancing act in tems of organization: for smaller interspersed conditions (like an internal note), just single-source it and have all conditions display in the same doc. If this becomes challenging due to the length of the doc (and readability suffers), then determine what needs to be made more modular and separate out the file with its own attributes (and `include::` where appropriate back in the "main" doc). Keep scale in mind but don't automatically build something for infinite scaling (this introduces needless complexity). Instead, keep the topic open and try to get ahead of this as needed rather than all at once in the beginning.
+
+----
+== General Guide
+
+This guide is intended for a general audience.
+// ... general content ...
+
+[IMPORTANT]
+ifdef::admin[]
+.Administrator Note
+=== Admins Only
+
+This information is relevant to system administrators.
+endif::admin[]
+
+[TIP]
+ifdef::internal[]
+.Internal Note
+=== Internal Use Only
+
+This section is meant for internal stakeholders.
+endif::internal[]
+----
 
 == Versioning
 
