--- a/modules/ROOT/pages/tools/antora.adoc
+++ b/modules/ROOT/pages/tools/antora.adoc
@@ -1,8 +1,8 @@
-:audience: dev
-
 = Antora
 
 With a tagline that claims it's a "site generator for tech writers who love writing AsciiDocs" I had to give Antora a try. In fact, it's what I wrote this portfolio with.
+
+Actually lets you nest your `/docs/` within the software. Storing docs with the rest of the software is good. You can even make symlinks between real code files and your examples files this way.
 
 image:icons/antora.png[Antora logo,50,50] 
 
@@ -42,7 +42,7 @@ including a section of the file. always scared of doing it by line, so do it by 
 
 include or exclude based on these attributes. use for administrator and internal notes.
 
-balancing act in tems of organization: for smaller interspersed conditions (like an internal note), just single-source it and have all conditions display in the same doc. If this becomes challenging due to the length of the doc (and readability suffers), then determine what needs to be made more modular and separate out the file with its own attributes (and `include::` where appropriate back in the "main" doc). Keep scale in mind but don't automatically build something for infinite scaling (this introduces needless complexity). Instead, keep the topic open and try to get ahead of this as needed rather than all at once in the beginning.
+balancing act in terms of organization: for smaller interspersed conditions (like an internal note), just single-source it and have all conditions display in the same doc. If this becomes challenging due to the length of the doc (and readability suffers), then determine what needs to be made more modular and separate out the file with its own attributes (and `include::` where appropriate back in the "main" doc). Keep scale in mind but don't automatically build something for infinite scaling (this introduces needless complexity). Instead, keep the topic open and try to get ahead of this as needed rather than all at once in the beginning.
 
 ----
 == General Guide
