--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -1,4 +1,4 @@
-* xref:index.adoc[Overview]
+* xref:index.adoc[Overview of abc]
 * Principles of abc
 ** xref:principles/docs-as-code.adoc[]
 ** xref:principles/agile.adoc[]
