--- a/modules/ROOT/pages/tools/antora.adoc
+++ b/modules/ROOT/pages/tools/antora.adoc
@@ -1,48 +1,40 @@
 = Antora
 
-With a tagline that claims it's a "site generator for tech writers who love writing AsciiDocs" I had to give Antora a try. In fact, it's what I wrote this portfolio with.
-
-Actually lets you nest your `/docs/` within the software. Storing docs with the rest of the software is good. You can even make symlinks between real code files and your examples files this way.
+With a tagline that claims it's a "site generator for tech writers who love writing AsciiDocs" I had to give Antora a try. In fact, it's what I wrote this portfolio with. Separation of concerns. 
 
 image:icons/antora.png[Antora logo,50,50] 
 
 == Separation of concerns
 
-"For tech writers" and it shows. Antora really separates content from design from styling from build. 
+Antora really separates content from design from styling from build. Three different repos (playbook, content tiles, theme). This degree of separation helps with large, enterprise projects. If it's a build issue, update your playbook repo to automatically push changes to other projects referencing the repo in their `antora.yml`.
 
-I appreciate its reliance on git and the ability to scale easily. 
+== Easy scaling
+
+Reliance on git and the ability to scale easily. Scaling is as easy as updating your `antora.yml` file to fetch from other repos. When they update, you consume the updated code. Defining branches in your `antora.yml` makes it easy to only grab changes ready for production, or, if you prefer, you can create a development pipeline by looking at other branches.
+
+Actually lets you nest your `/docs/` within the software. Storing docs with the rest of the software is good. You can even make symlinks between real code files and your examples files this way.
 
 == AsciiDoc over traditional Markdown
 
 Traditional Markdown is great for documentation, but as a tech writer, I prefer for the power and flexibility of AsciiDoc.
 
-Key factors in AsciiDoc syntax (turn this list into a short paragraph and add to preceding heading) 
-
-* as readable as Markdown
-* *link:https://docs.asciidoctor.org/asciidoc/latest/directives/conditionals/[conditionals,window=_blank]:* route content depending on output (for example, HTML or PDF)
-* *link:https://docs.asciidoctor.org/asciidoc/latest/directives/ifdef-ifndef/[directives,window=_blank]:* reuse content with the `::includes` directive and display specific content using logic with the `::ifdef`, `::ifndef`, and `::ifeval` directives
-
-== Attributes
-
-Works similar to how Hugo uses front matter (creates metadata).
-
-Approach: either define at the top of the page or (if you have a lot of attributes you'd like to curate) store in an attributes folder and include for different "recipes" of audiences (admin, internal).
-
-example attributes file: `general-attribues.adoc`, `administrator-attributes.adoc`, `internal-attributes.adoc`
-
-Single source content (and output depending on audience). This means you don't have to have two versions of the same doc--it all lives on the same page.
-
-== Includes
+=== Includes
 
 great tool. includes the whole file by default. 
 
 including a section of the file. always scared of doing it by line, so do it by "tag" if you're trying to grab a section of the page. if using tags, you'll need to filter them out, though! `\include::file-with-snippets.adoc[tag=!*]`
 
-== Conditional directives
+=== Conditional directives
 
 include or exclude based on these attributes. use for administrator and internal notes.
 
 balancing act in terms of organization: for smaller interspersed conditions (like an internal note), just single-source it and have all conditions display in the same doc. If this becomes challenging due to the length of the doc (and readability suffers), then determine what needs to be made more modular and separate out the file with its own attributes (and `include::` where appropriate back in the "main" doc). Keep scale in mind but don't automatically build something for infinite scaling (this introduces needless complexity). Instead, keep the topic open and try to get ahead of this as needed rather than all at once in the beginning.
+
+Attributes: Works similar to how Hugo uses front matter (creates metadata).
+
+Single source content (and output depending on audience) with attributes that you include or exclude. This means you don't have to have two versions of the same doc--it all lives on the same page (balancing act). Can define attributes in dedicated files and source them.
+
+example attributes file: `general-attribues.adoc`, `administrator-attributes.adoc`, `internal-attributes.adoc`
 
 ----
 == General Guide
@@ -73,7 +65,7 @@ Usually producing versioned docs isn't that tightly declared into your project's
 
 == AsciiDoctor-pdf for print
 
-When outputting single-sourced AsciiDoc content into PDF format, I prefer the link:https://www.npmjs.com/package/asciidoctor-pdf[AsciiDoctor-pdf] NPM package.
+Antora is essentially a wrapper for AsciiDoctor with support for link:https://www.npmjs.com/package/asciidoctor-pdf[AsciiDoctor-pdf].
 
 === Install AsciiDoctor-pdf
 ```NPM
@@ -90,5 +82,3 @@ base:
 ```
 
 **TIP:** refer to the link:https://github.com/asciidoctor/asciidoctor-pdf/blob/main/docs/theming-guide.adoc[AsciiDoctor PDF Theming Guide,window=_blank] for more details.
-
-todo...
